src/app.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

:root {
  --font: -apple-system, BlinkMacSystemFont, Helvetica Neue, sans-serif;
  --font-size: 16px;
	--font-mono: 'Fira Mono', monospace;
  --primary: #00bffc;
  --secondary: #000;
  --radius: 4px;
  --color-light: #0d1117;
  --background-light: #fff;
  --color-dark: #fefefe;
  --background-dark: #1d1d1f;
  --background-dark-secondary: #383838;
  --border-dark: #424245;
  --color-dark-secondary: #A1A1A6;
  --emphasis-high: 0.87;
  --border-color: #30363d;
  --emphasis-medium: 0.8;
  --emphasis-disabled: 0.38;  
}

html {
  font-size: var(--font-size);
}

body {
  font-family: var(--font);
  margin: 0;
  padding: 0;
  position: relative;
  min-width: 100vw;
  min-height: 100vh;
  font-weight: 400;
  line-height: 1.2;
}

body.light {
  color: var(--color-light);
  background-color: var(--background-light);
}

body.dark {
  color: var(--color-dark);
  background-color: var(--background-dark);
}

a {
  color: var(--primary);
}

h6,
h5,
h4,
h3,
h2,
h1 {
  font-family: var(--font-header);
  margin-top: 0;
  margin-bottom: 2rem;
  font-weight: 500;
}

h1 {
  font-size: calc(1.375rem + 1.5vw);
}
@media (min-width: 1200px) {
  h1 {
    font-size: 3.5rem;
  }
}

h2 {
  font-size: calc(1.325rem + 0.9vw);
}
@media (min-width: 1200px) {
  h2 {
    font-size: 3rem;
  }
}

h3 {
  font-size: calc(1.3rem + 0.6vw);
}
@media (min-width: 1200px) {
  h3 {
    font-size: 1.75rem;
  }
}

h4 {
  font-size: calc(1.275rem + 0.3vw);
}
@media (min-width: 1200px) {
  h4 {
    font-size: 1.5rem;
  }
}

h5 {
  font-size: 1.25rem;
}

h6 {
  font-size: 1rem;
}

section {
  padding: 0 2rem;
}

@media (prefers-reduced-motion: no-preference) {
  body {
    scroll-behavior: smooth;
  }
}

@media (prefers-color-scheme: light) {
  body {
    color: var(--color-light);
    background-color: var(--background-light);
  }
}

@media (prefers-color-scheme: dark) {
  body {
    color: var(--color-dark);
    background-color: var(--background-dark);
  }
}

